# rock-band-drum-sampler-plugin

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build_and_test.bat
.github/workflows/: ci.yml  release.yml
audio/: PLACE_YOUR_AUDIO_SAMPLES_HERE.md
scripts/: build_and_test.ps1  run_pluginval.ps1
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: AudioSmokeTests.cpp  MidiRemapTests.cpp  StateTests.cpp  TestMain.cpp
